Fixing dependencies and start to use materializecss

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>nyr</title>
+  	<meta charset="utf-8">
+  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hguimaraes - New Year's Resolution</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  	<link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
+  	<link rel="stylesheet" href="/bower_components/materialize/dist/css/materialize.min.css" media="screen,projection">
   </head>
   <body>
     <div id="app"></div>
+    <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="/bower_components/materialize/dist/js/materialize.min.js" type="text/javascript"></script>
     <script src="dist/build.js"></script>
   </body>
 </html>
