--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   	<link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
   	<link rel="stylesheet" href="/bower_components/materialize/dist/css/materialize.min.css" media="screen,projection">
   </head>
-  <body>
+  <body bgcolor="#f5f5f5">
     <div id="app"></div>
     <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="/bower_components/materialize/dist/js/materialize.min.js" type="text/javascript"></script>
