--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hguimaraes - New Year's Resolution</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  	<link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
-  	<link rel="stylesheet" href="/bower_components/materialize/dist/css/materialize.min.css" media="screen,projection">
+  	<link rel="stylesheet" href="./bower_components/font-awesome/css/font-awesome.min.css">
+  	<link rel="stylesheet" href="./bower_components/materialize/dist/css/materialize.min.css" media="screen,projection">
   </head>
   <body bgcolor="#f5f5f5">
     <div id="app"></div>
-    <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
-    <script src="bower_components/materialize/dist/js/materialize.min.js" type="text/javascript"></script>
-    <script src="src/jsPlugins_materialize.js"></script>
+    <script src="./bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="./bower_components/materialize/dist/js/materialize.min.js" type="text/javascript"></script>
     <script src="dist/build.js"></script>
     <script>
       // Jquery stuff
