Fixing links and creating new pages

--- a/index.html
+++ b/index.html
@@ -74,22 +74,6 @@
                     </div>
                 </div>
 
-                <!-- Arts Card -->
-                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-                    <div class="mdl-card__media">
-                        <img class="article-image" src=" images/example-work01.jpg" border="0" alt="">
-                    </div>
-                    <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Arts</h2>
-                    </div>
-                    <div class="mdl-card__supporting-text">
-                        The objective is to develop or improve activities related to visual, auditory or artworks by expressing the my imaginative or technical skills.
-                    </div>
-                    <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
-                    </div>
-                </div>
-
                 <!-- Books Card -->
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
@@ -99,10 +83,10 @@
                         <h2 class="mdl-card__title-text">Books</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        Books list to read this year covering a large variety of genres <br/><br/><br/>
+                        Books list to read this year covering a large variety of genres <br><br><br><br>
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="books.html">Read more</a>
                     </div>
                 </div>
 
@@ -115,58 +99,26 @@
                         <h2 class="mdl-card__title-text">Education</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        Goals related to professional and academic knowledge. <br/><br/><br/>
+                        Goals related to professional and academic knowledge. <br><br><br><br>
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="education.html">Read more</a>
                     </div>
                 </div>
 
-                <!-- Fitness Card -->
+                <!-- Arts, Experience and Miscellaneous Card -->
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
-                        <img class="article-image" src=" images/example-work03.jpg" border="0" alt="">
+                        <img class="article-image" src=" images/example-work01.jpg" border="0" alt="">
                     </div>
                     <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Fitness</h2>
+                        <h2 class="mdl-card__title-text">Arts and Experiences</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        Goals related to health, fight against sedentary lifestyle and feeling good physically and mentally. <br/><br/><br/><br/>
+                        Develop activities related to visual and auditory works. Also experience new things by expressing my imaginative or random stuff. <br><br>
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
-                    </div>
-                </div>
-
-                <!-- Experience Card -->
-                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-                    <div class="mdl-card__media">
-                        <img class="article-image" src=" images/example-work04.jpg" border="0" alt="">
-                    </div>
-                    <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Experience</h2>
-                    </div>
-                    <div class="mdl-card__supporting-text">
-                        Resolutions more related to experience more diverse situations in life. <br/><br/><br/><br/><br/>
-                    </div>
-                    <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
-                    </div>
-                </div>
-
-                <!-- Miscellaneous Card -->
-                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-                    <div class="mdl-card__media">
-                        <img class="article-image" src=" images/example-work08.jpg" border="0" alt="">
-                    </div>
-                    <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Miscellaneous</h2>
-                    </div>
-                    <div class="mdl-card__supporting-text">
-                        Uncategorized goals or that could be in more then one section.<br><br><br><br><br>
-                    </div>
-                    <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="artsexp.html">Read more</a>
                     </div>
                 </div>
             </div>
