--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <!-- Data Science Main card --> 
                 <div class="mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
                     <div class="mdl-card__media mdl-cell mdl-cell--12-col-tablet">
-                        <img class="article-image" src=" images/example-blog01.jpg" border="0" alt="">
+                        <img class="article-image" src=" images/datascience.png" border="0" alt="">
                     </div>
                     <div class="mdl-cell mdl-cell--8-col">
                         <h2 class="mdl-card__title-text">Data Science Journey</h2>
@@ -69,7 +69,7 @@
                             <p>The goal of this resolution is to build a solid foundation on the disciplines related to Data Science, focusing on Machine Learning and Deep Learning. Become more activate on Kaggle Competitions and build a strong Portfolio are also targets for this year. Click in read more for full description.</p>
                         </div>
                         <div class="mdl-card__actions mdl-card--border">
-                            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
+                            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="datascience.html">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                 <!-- Books Card -->
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
-                        <img class="article-image" src=" images/example-work07.jpg" border="0" alt="">
+                        <img class="article-image" src=" images/books.jpg" border="0" alt="">
                     </div>
                     <div class="mdl-card__title">
                         <h2 class="mdl-card__title-text">Books</h2>
@@ -93,7 +93,7 @@
                 <!-- Education Card -->
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
-                        <img class="article-image" src=" images/example-work02.jpg" border="0" alt="">
+                        <img class="article-image" src=" images/education.png" border="0" alt="">
                     </div>
                     <div class="mdl-card__title">
                         <h2 class="mdl-card__title-text">Education</h2>
@@ -109,7 +109,7 @@
                 <!-- Arts, Experience and Miscellaneous Card -->
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
-                        <img class="article-image" src=" images/example-work01.jpg" border="0" alt="">
+                        <img class="article-image" src=" images/arts.jpg" border="0" alt="">
                     </div>
                     <div class="mdl-card__title">
                         <h2 class="mdl-card__title-text">Arts and Experiences</h2>
