Inserting books resolution

--- a/books.html
+++ b/books.html
@@ -56,47 +56,142 @@
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width">
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
-                    <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Blog template</h2>
-                    </div>
-                    <div class="mdl-card__media">
-                        <img class="article-image" src=" images/portfolio-example-01.jpg" border="0" alt="">
-                    </div>
-                    <div class="mdl-card__supporting-text">
-                        <strong>Includes</strong>
-                        <span>Design, UX and Frontend Development</span>
-                    </div>
                     <div class="mdl-grid portfolio-copy">
-                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3>
+                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Books</h3>
                         <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
                             <p>
-                                Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
+                                List of books to read this year covering a large variety of genres. I think for most part of people 10 books are really common, but it isn't for me and I need to change that. During my college years I have be reading technical books, but almost nothing related to other fields.
                             </p>
-                        </div>
-                        <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-02.jpg" border="0" alt="">
-                        </div>
-                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Initial Ideas</h3>
-                        <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-03.jpg" border="0" alt="">
-                        </div>
-                        <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding ">
                             <p>
-                                Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
+                                Most part of these books will be read in "paper" mode, but I also would like to use this resolution to start using digital forms, such as ebooks and audiobooks.
                             </p>
                         </div>
-                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Final Concept</h3>
                         <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-05.jpg" border="0" alt="">
+                            <img class="article-image" src=" images/books.jpg" border="0" alt="">
                         </div>
-                        <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-06.jpg" border="0" alt="">
-                        </div>
-                        <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
-                            <p>
-                                Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
-                            </p>
-                        </div>
+
+                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Goals</h3>
+                        <ul class="list-control mdl-list">
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">book</i>
+                                Quincas Borba - Machado de Assis
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">book</i>
+                                Notes from Underground - Fiódor Dostoiévski
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">book</i>
+                                Blindness - José Saramago
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">book</i>
+                                The Dharma Bums - Jack Kerouac
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">book</i>
+                                Desolation Angels - Jack Kerouac
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">book</i>
+                                Elon Musk - Ashlee Vance
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">book</i>
+                                The Best We Could Do: An Illustrated Memoir – Thi Bui
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">book</i>
+                                Hackeando Tudo - Raiam Santos
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">book</i>
+                                The Rosie Project: A Novel - Graeme Simsion
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">book</i>
+                                The Subtle Art of Not Giving a F*ck - Mark Manson
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+                        </ul>
                     </div>
                 </div>
             </div>
