--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <h2 class="mdl-card__title-text">Books</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        Books list to read this year covering a large variety of genres <br><br><br><br>
+                        List of books to read this year covering a large variety of genres <br><br><br><br>
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="books.html">Read more</a>
